apps/base/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    pod-security.kubernetes.io/enforce: restricted
