apps/base/authelia/httproute.yaml
# The login portal.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - auth.hirednoobs.com
  rules:
    - backendRefs:
        - name: authelia
          port: 9091
